fix openai stuff use proper way of delaying the menu opening